ajout btn parametre (en cours...)

--- a/CaisseGenclik/CaisseGenclik.csproj
+++ b/CaisseGenclik/CaisseGenclik.csproj
@@ -70,8 +70,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Others\DelegateCommand.cs" />
     <Compile Include="Others\XmlHelper.cs" />
-    <Compile Include="Others\RelayCommand.cs" />
     <Compile Include="Services\AuthenticationService.cs" />
     <Compile Include="ViewModels\ArticlesViewModel.cs" />
     <Compile Include="ViewModels\CaisseViewModel.cs" />
@@ -93,9 +93,6 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\UserControls\ItemArticle.xaml.cs">
-      <DependentUpon>ItemArticle.xaml</DependentUpon>
-    </Compile>
     <Page Include="Views\ArticlesView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -109,10 +106,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\FactureView.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\UserControls\ItemArticle.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
